--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,19 @@ services:
   db:
     container_name: postgres
     image: postgres
+    restart: always
+    environment:
+      POSTGRES_DB: phoenix
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
 
   web:
     container_name: elixir
-    build: ./Dockerfile
+    build: 
+        context: ./Dockerfile
+    command: /bin/bash docker_start.sh
     volumes:
-      - type: bind
-        source: .
-        target: /app
+      - .:/my_app
     ports:
       - "4000:4000"
     depends_on:
